--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "1.8.8",
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "@icon-park/react": "^1.3.5",
+    "framer-motion": "6.3.0",
     "next": "12.1.5",
+    "ol": "^6.14.1",
+    "ol-mapbox-style": "^8.0.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.24",
+    "@types/ol": "^6.5.3",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
     "eslint": "8.13.0",
